--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
+    "@types/sequelize": "^4.28.20",
     "eslint": "^9.10.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
@@ -29,7 +30,9 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
+    "sequelize": "^6.37.3",
     "zod": "^3.23.8"
   }
 }
