Big Update, still left foreign keys, ext auth and trigger for dates

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=3000;
-ACCESS_SECRET="SOMEACCESSSECRET";
-REFRESH_SECRET="SOMEREFRESHSECRET";
-DATABASEURL="";
+ACCESS_SECRET="SOMEACCESSSECRET"
+REFRESH_SECRET="SOMEREFRESHSECRET"
+DATABASE_NAME="barberdb"
+DATABASE_USERNAME="root"
+DATABASE_PASSWORD="Sistemas1_mysql"
+DATABASE_HOST="127.0.0.1"
