--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.0",
     "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3",
     "sequelize": "^6.37.3",
     "zod": "^3.23.8"
   }
