--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^22.5.5",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/sequelize": "^4.28.20",
     "eslint": "^9.15.0",
     "rimraf": "^6.0.1",
