--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.10.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
@@ -42,6 +42,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.3",
+    "stripe": "^17.4.0",
     "zod": "^3.23.8"
   }
 }
