--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn --clear src/index.ts",
+    "dev": "cross-env NODE_ENV=development && tsnd --respawn --clear src/index.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/index.js"
   },
@@ -16,16 +16,20 @@
     "@stylistic/eslint-plugin": "^2.8.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/sequelize": "^4.28.20",
+    "cross-env": "^7.0.3",
     "eslint": "^9.15.0",
+    "markdown-notes-tree": "^1.13.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
@@ -34,10 +38,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "loadash": "^1.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
